<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IM PRO</string>
    <string name="no_event">No event</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">All day</string>
    <string name="grant_access">Grant access</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="event_time">Event time</string>
    <string name="event_calendar">Event calendar</string>
    <string name="warning_empty_title">Event title is required</string>
    <string name="choose_calendar">Choose a calendar</string>
    <string name="create_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this event?</string>
    <string name="confirm_discard_changes">Discard changes?</string>
    <string name="warning_missing_calendar">Please choose a calendar</string>
    <string name="end_time">Ends\n%s</string>
    <string name="default_calendar_name">Local Calendar</string>
    <string name="event_created">Event created.</string>
    <string name="event_updated">Event updated.</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="show_weather">Show weather</string>
    <string name="updating_weather" tools:ignore="TypographyEllipsis">Updating weather information...</string>
    <string name="location_permission_required">Updating weather requires location access</string>
    <string name="week_start">Week start</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="calendars">Calendars</string>
    <string name="error_location">Unable to determine your location</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Login page-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_opportunity">Opportunities</string>

    <!--Customer-->
    <string name="hint_custName">Customer Name</string>
    <string name="hint_custSt">Customer Status</string>
    <string name="hint_custPhone">Customer Phone</string>
    <string name="hint_custAddress">Customer Address</string>
    <string name="hint_custDesc">Customer Description</string>
    <string name="btn_custAdd">Create New Customer</string>

    <!--Opportunity-->
    <string name="hint_oppName">Opportunity Name</string>
    <string name="hint_oppCust">Customer</string>
    <string name="hint_oppSt">Status</string>
    <string name="hint_oppProb">Win Probability</string>
    <string name="hint_oppStage">Sales Stage</string>
    <string name="hint_oppDate">Due Date</string>
    <string name="btn_oppAdd">Create New Opportunity</string>
</resources>
