<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_marginTop="52dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custName"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/txtCustSt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_custSt"
                app:met_floatingLabel="normal"
                android:textColorHint="#CFD8DC"
                android:gravity="start"
                android:layout_margin="2.5dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custPhone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custAddress"
                    android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custDesc"
                    android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCreateCust"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/btn_custAdd"
                android:textColor="@android:color/white"
                android:elevation="@dimen/btn_add"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>