<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailCustCoordinat"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_marginTop="52dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtOppIdDetail"
                android:gravity="center_vertical"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:visibility="gone"
                android:background="@android:drawable/editbox_background"
                android:hint="Opportunity ID" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_oppNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtOppNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_oppName"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/txtOppCustDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_oppCust"
                app:met_floatingLabel="normal"
                android:textColorHint="#CFD8DC"
                android:gravity="start"
                android:layout_margin="2.5dp"
                />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/txtOppStDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_oppSt"
                app:met_floatingLabel="normal"
                android:textColorHint="#CFD8DC"
                android:gravity="start"
                android:layout_margin="2.5dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_oppProb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtOppProbDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_oppProb"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_oppDateDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtOppDateDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_oppDate"
                    android:inputType="datetime"/>
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/txtOppStageDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_oppStage"
                app:met_floatingLabel="normal"
                android:textColorHint="#CFD8DC"
                android:gravity="start"
                android:layout_margin="2.5dp"
                />

            <Button
                android:id="@+id/btnupdateOppDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#f1c40f"
                android:text="Update Data"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/btndeleteOppDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#e74c3c"
                android:text="Delete Data"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>