<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailCustCoordinat"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_marginTop="52dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtCustIdDetail"
                android:gravity="center_vertical"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:visibility="gone"
                android:background="@android:drawable/editbox_background"
                android:hint="Customer ID" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custName"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/txtCustStDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_custSt"
                app:met_floatingLabel="normal"
                android:textColorHint="#CFD8DC"
                android:gravity="start"
                android:layout_margin="2.5dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custPhoneDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustPhoneDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custPhone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custAddressDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustAddressDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custAddress"
                    android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_custDescDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/txtCustDescDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custDesc"
                    android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnupdateCustDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#f1c40f"
                android:text="Update Data"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/btndeleteCustDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#e74c3c"
                android:text="Delete Data"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>